--- a/components/Palette/Palette.module.scss
+++ b/components/Palette/Palette.module.scss
@@ -1,7 +1,5 @@
-.main__wrapper {
+.palette__wrapper {
   display: flex;
-  justify-content: center;
   flex-direction: column;
   align-items: center;
-  gap: 20px;
 }
