--- a/components/DrawPanel/DrawPanel.module.scss
+++ b/components/DrawPanel/DrawPanel.module.scss
@@ -1,6 +1,7 @@
 .panel__wrapper {
   display: flex;
   align-items: center;
+  gap: 15px;
   padding: 20px;
   border: 1px solid #000;
   background-color: #fdefef;
