--- a/components/DrawMode/DrawMode.module.scss
+++ b/components/DrawMode/DrawMode.module.scss
@@ -1,3 +1,17 @@
+.mode__wrapper {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.mode__tile {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex: 0 0 calc(33.333% - 15px);
+  margin: 5px;
+  cursor: pointer;
+}
+
 .mode__choose {
   outline: 1px solid #000;
 }
