--- a/components/Palette/Palette.module.scss
+++ b/components/Palette/Palette.module.scss
@@ -3,3 +3,12 @@
   flex-direction: column;
   align-items: center;
 }
+
+.palette {
+  width: 30px;
+  height: 30px;
+  border: none;
+  box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.3);
+  cursor: pointer;
+  outline: none;
+}
