--- a/components/DrawMode/DrawMode.module.scss
+++ b/components/DrawMode/DrawMode.module.scss
@@ -1,13 +1,15 @@
 .mode__wrapper {
   display: flex;
   flex-wrap: wrap;
+  padding-bottom: 5px;
+  border-right: 1px solid #000;
 }
 
 .mode__tile {
   display: flex;
   align-items: center;
   justify-content: center;
-  flex: 0 0 calc(33.333% - 15px);
+  flex-basis: calc(33.333% - 10px);
   margin: 5px;
   cursor: pointer;
 }
