--- a/components/UserColors/UserColors.module.scss
+++ b/components/UserColors/UserColors.module.scss
@@ -1,5 +1,6 @@
 .colors__wrapper {
   display: flex;
+  flex-direction: column;
 }
 
 .colors__btn {
@@ -23,6 +24,7 @@
 .color__wrapper {
   display: flex;
   flex-wrap: wrap;
+  justify-content: center;
 }
 
 
@@ -30,9 +32,8 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  flex: 0 0 calc(50% - 15px);
   margin: 5px;
-  width: 5px;
+  width: 18px;
   height: 18px;
   border: 1px solid #000;
   cursor: pointer;
